// Copyright 2020 Stefan Prisca
// 
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
// 
//     http://www.apache.org/licenses/LICENSE-2.0
// 
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax="proto3";

option go_package = "api/lightpeer";

import "google/protobuf/timestamp.proto";

message Lightblock {

    enum BlockType {
        NETWORK = 0;
        CLIENT =  1;
    }

    string ID  = 1;
    bytes Payload = 2;
    string PrevID = 3;

    BlockType Type = 9;
    google.protobuf.Timestamp last_updated = 10;
}

service Lightpeer {
    // JoinNetwork tells the peer to join the network at the given address from JoinRequest.
    // The peer will open a client connection to that address, and call ConnectNewPeer to join the network.
    rpc JoinNetwork (JoinRequest) returns (JoinResponse) {};

    // ConnectNewPeer accepts a connection from another peer, adding it to the network.
    // If successful, it returns a stream of all the messages which were stored in the network
    rpc ConnectNewPeer (ConnectRequest) returns (stream Lightblock) {};
    
    // Persist saves the state from the message on the chain
    rpc Persist (PersistRequest) returns (PersistResponse) {};
    
    // Query returns all the chain states saved by a Persist request
    rpc Query   (EmptyQueryRequest) returns (stream QueryResponse) {};
    
    // NotifyNewBlock is used by peers to notify each other of block updates
    rpc NotifyNewBlock (Lightblock) returns (NewBlockResponse) {};
}

message JoinRequest {
    string Address = 1;
}

message JoinResponse {
    string Result = 1;
}

message ConnectRequest {
    PeerInfo Peer = 1;
}

message PeerInfo {
    string Address = 1;
    string Name = 2;
}

message PersistRequest {
    bytes Payload = 1;
    // otel.SpanContext teleContext
}

message PersistResponse {
    string Response = 1;
}

message EmptyQueryRequest {}

message QueryResponse {
    bytes Payload = 1;
}

message NewBlockResponse {
    string Response = 1;
}
